# diener

./: .gitignore  Cargo.toml  README.md
.github/workflows/: quick-check.yml  release.yml
Formula/: diener.rb
src/: check_features.rs  main.rs  patch.rs  update.rs  workspacify.rs
templates/: formula.rb
