[package]
name = "diener"
version = "0.4.7"
authors = ["Bastian Köcher <git@kchr.de>"]
edition = "2021"
categories = [ "command-line-utilities" ]
documentation = "https://docs.rs/diener"
repository = "https://github.com/bkchr/diener"
keywords = [ "cli", "substrate", "polkadot" ]
license = "Apache-2.0/MIT"
description = """
dependency diener is a tool for easily changing [Substrate](https://github.com/paritytech/substrate), [Polkadot](https://github.com/paritytech/polkadot) or [BEEFY](https://github.com/paritytech/grandpa-bridge-gadget) dependency versions
"""
readme = "./README.md"

[dependencies]
structopt = "0.3"
walkdir = "2.3"
git-url-parse = "0.4"
toml_edit = "0.19"
cargo_metadata = "0.17"
env_logger = "0.10"
log = "0.4"
pathdiff = "0.2"
anyhow = "1.0"
